crates/swc_ecma_parser/tests/test262-error-references/fail/9fdb9877fcc446e2.js.stderr
error: Unexpected token `...`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/9fdb9877fcc446e2.js:1:7
  |
1 | if (b,...a, );
  |       ^^^

